test/Fail/NoParameterOfName.err
NoParameterOfName.agda:5.13-14: error: [NoParameterOfName]
No parameter of name B
when checking the definition of D
